force-app/main/default/objects/Jira_Integration_Transaction__c/Jira_Integration_Transaction__c.object-meta.xml
<CustomObject>
    <description
  >System-facing ledger for redacted Jira integration audit events and idempotency keys.</description>
    <label>Jira Integration Transaction</label>
    <nameField>
        <displayFormat>JIT-{000000}</displayFormat>
        <label>Transaction Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Integration Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>