force-app/main/default/objects/Jira_Integration_Transaction__c/fields/Correlation_Key__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Key__c</fullName>
    <description
  >Hashed or caller-supplied correlation key used for best-effort idempotency.</description>
    <externalId>true</externalId>
    <label>Correlation Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>