force-app/main/default/objects/Jira_Integration_Transaction__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description
  >Redacted JSON containing status code, retryability, latency, executing user, and normalized error type.</description>
    <label>Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>