force-app/main/default/objects/Jira_Integration_Transaction__c/fields/Jira_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Key__c</fullName>
    <description
  >Jira issue key associated with the redacted transaction.</description>
    <label>Jira Issue Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>