force-app/main/default/objects/Jira_Integration_Transaction__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description
  >Direct Jira operation that produced this transaction.</description>
    <label>Operation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>