force-app/main/default/objects/Jira_Integration_Transaction__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description
  >Normalized transaction outcome such as Success, Duplicate, or Failure.</description>
    <label>Outcome</label>
    <length>40</length>
    <type>Text</type>
</CustomField>